--- a/modules/maths/doc/maths.dox
+++ b/modules/maths/doc/maths.dox
@@ -1,10 +1,10 @@
 /**
- * @defgroup openma_maths ma::maths
+ * @defgroup openma_math ma::math
  * @brief Linear algebra for reconstructed data
  *
- * This module corresponds to the library @c openma_maths
+ * This module corresponds to the library @c openma_math
  *
- * The usage of the library would be done only through the header @c openma/maths.h. You should not include other (sub-)header as they are dependent between them.
+ * The usage of the library would be done only through the header @c openma/math.h. You should not include other (sub-)header as they are dependent between them.
  *
- * @todo Details the goal and usage or ma::maths.
+ * @todo Details the goal and usage or ma::math.
  */
